fixed monthly view showing opposite colors and numbers for completed/incompleted notes. fixed where monthly dates are center aligned after changes to button

--- a/components/pages/monthly/day.module.css
+++ b/components/pages/monthly/day.module.css
@@ -7,9 +7,12 @@
   cursor: pointer;
   justify-self: stretch;
   background-color: inherit;
+  display: flex;
+  flex-direction: column;
 }
 
 .date {
+  width: 100%;
   text-align: right;
   padding: 0.3rem 0.5rem 0 0;
 }
