--- a/components/pages/monthly/notesViewer/wide_view.module.css
+++ b/components/pages/monthly/notesViewer/wide_view.module.css
@@ -5,6 +5,8 @@
   border-bottom: 1px outset white;
   color: black;
   line-height: 125%;
+  width: 100%;
+  text-align: left;
 }
 
 .completed {
